about section sorted

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>CSS Practice</title>
   </head>
   <body>
-    <section id="aboutme">
+    <section id="about-me">
       <nav>
         <div class="personal_logo">Victoria Dennis</div>
         <ul class="nav__link--list">
